# push-to-talk

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PACKAGING.md  README.md  build.bat  build_linux.sh  build_macos.sh  coverage.xml  example_usage.py  main.py  main_console.py  main_gui.py  push_to_talk.spec  pyproject.toml  requirements.txt  tatus  validate_ollama.py
.claude/: settings.local.json
.github/workflows/: ci-test-coverage.yml  claude-code-review.yml  deploy-landing.yml  repo-maintenance.yml  test-cov.yml  test.yml
.jules/: bolt.md  palette.md  scribe.md
build_script/: PACKAGING.md  build.bat  build.py  push_to_talk.spec
debug_audio_20250801_230001_157/: processing_info.txt
debug_audio_20250801_230241_499/: processing_info.txt
docs/: development_guides.md
landing/: REVIEW_REPORT.md  index.html  script.js  styles.css
src/: __init__.py  audio_feedback.py  audio_processor.py  audio_recorder.py  config_gui.py  exceptions.py  hotkey_service.py  local_whisper_manager.py  local_whisper_transcriber.py  prompts.py  push_n_talk.py  push_to_talk.py  streaming.py  text_inserter.py  text_refiner.py  text_refiner_base.py  text_refiner_cerebras.py  text_refiner_factory.py  text_refiner_gemini.py  text_refiner_openai.py  transcriber_factory.py  transcription.py  transcription_base.py  transcription_deepgram.py  transcription_openai.py  utils.py
src/config/: constants.py  hotkey_aliases.json  prompts.py
src/gui/: __init__.py  api_section.py  audio_section.py  config_persistence.py  configuration_window.py  glossary_section.py  hotkey_recorder.py  hotkey_section.py  prompt_section.py  settings_section.py  status_section.py  validators.py
tests/: README.md  conftest.py  perf_check.js  test_audio_processor.py  test_audio_recorder.py  test_config_gui.py  test_custom_refinement.py  test_format_instruction.py  test_helpers.py  test_hotkey_recorder.py  test_hotkey_service.py  test_integration.py  test_local_whisper_manager.py  test_local_whisper_transcriber.py  test_push_to_talk.py  test_text_inserter.py  test_text_refiner.py  test_text_refiner_factory.py  test_transcriber_factory.py  test_transcription.py  test_transcription_deepgram.py  test_transcription_openai.py  test_utils.py
tests/fixtures/: audio1_script.txt  audio2_script.txt  audio3_script.txt
