[project]
name = "push-to-talk"
version = "0.4.0"
description = "A push-to-talk speech-to-text application using STT AI models for real-time transcription and support active window text insertion."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyboard>=0.13.5",
    "litellm>=1.80.0",
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pyperclip>=1.11.0",
    "soundfile>=0.13.1",
    "psola>=0.0.1",
    "pydub>=0.25.1",
    "playsound3>=3.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.4.0",
    "pyinstaller>=6.16.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.5",
]
