[project]
name = "push-to-talk"
version = "0.4.0"
description = "A push-to-talk speech-to-text application using STT AI models for real-time transcription and support active window text insertion."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "deepgram-sdk>=3.9.0",
    "loguru>=0.7.2",
    "openai>=1.97.1",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pyperclip>=1.9.0",
    "playsound3>=3.2.4",
    "pynput>=1.7.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.3.0",
    "pre-commit>=4.2.0",
    "pyinstaller>=6.14.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.5",
]
